# hotplug_flutter_plugin

./: .gitignore  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: hotplug_flutter.dart
test/: hotplug_flutter_test.dart
windows/: CMakeLists.txt  hotplug_flutter_plugin.cpp  usb_tracer.cpp  usb_tracer.h  util.cpp  util.h
windows/include/hotplug_flutter/: hotplug_flutter_plugin.h
windows/os/win/: hiddev_detector.cc  hiddev_detector.h
